# vscode_template

./: CMakeLists.txt  Dockerfile  README.md  configure_vscode.sh
examples/: CMakeLists.txt  sample.cpp
include/vscode_template/: library.h
src/: library.cpp
